@@ -12,6 +12,8 @@ or
 (s._CreatedBy_key = 1421 and s.creation_date = '01/04/2013')
 or
 (s._CreatedBy_key = 1421 and s.creation_date = '01/09/2013')
+or
+(s._CreatedBy_key = 1421 and s.creation_date = '01/15/2013')
 go
 
 create index idx1 on #exclude(_Strain_key)
@@ -26,7 +28,7 @@ print '(do not include any strains flagged as needing review by Janan''s load)'
 print''
 print 'excludes /Mmcd from 06/07/2011'
 print 'excludes /Mmucd from 09/24/2012'
-print 'excludes ''mberry'' from 01/04/2013, 01/09/2013'
+print 'excludes ''mberry'' from 01/04/2013, 01/09/2013, 01/15/2013'
 print 'excludes created-by = ''strainautoload'''
 print ''
 
@@ -70,7 +72,7 @@ print '(do not include any strains flagged as needing review by Janan''s load)'
 print ''
 print 'includes /Mmcd from 06/07/2011'
 print 'includes /Mmucd from 09/24/2012'
-print 'includes ''mberry'' from 01/04/2013, 01/09/2013'
+print 'includes ''mberry'' from 01/04/2013, 01/09/2013, 01/15/2013'
 print ''
 
 (
